# datapilot-mcp-server

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  env.template  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-summary.yml  release.yml
src/: __init__.py  main.py  models.py  openai_client.py  snowflake_client.py  web_server.py
tests/: __init__.py  test_main.py  test_web_server.py
